--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ img {
   justify-content: space-between;
 }
 
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+}
+
+tr:nth-child(even) {
+  background-color: lightskyblue;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
