--- a/style.css
+++ b/style.css
@@ -10,28 +10,25 @@ img {
   flex-direction: row;
 }
 
+
 .spaces {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 60%;
-}
-
-tr:nth-child(even) {
-  background-color: lightskyblue;
-}
+td, th {
+  border: 1px;
+  text-align: center;
+  padding: 8px;
+} 	
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #333 ;
   }
   
   li :first {
